syntax = "proto3";

service User {
  rpc listUsers (ListUsersRequest) returns (ListUsersResponse) {}
}

message ListUsersRequest {}
message ListUsersResponse {
  repeated UserModel users = 1;
}
message UserModel {
  int32 id = 1;
  string name = 2;
}

